tests/baselines/reference/parserSymbolIndexer3.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.ts(2,13): error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.ts (1 errors) ====
    class C {
        static [s: symbol]: string;
                ~
!!! error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.
    }